--- a/Second-Nature/vue/src/style.css
+++ b/Second-Nature/vue/src/style.css
@@ -2,6 +2,7 @@ body {
     background-color: #f4fbf3;
     color: #3e4a3d;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin: 0;
 }
 
 a {
@@ -10,4 +11,33 @@ a {
 
 a:visited {
     color: #a1af9f;
+}
+
+h1 {
+    font-size: 24pt;
+    margin: 10px 0;
+}
+
+h2 {
+    font-size: 20pt;
+}
+
+h3 {
+    font-size: 16px;
+}
+
+input {
+    height: 2em;
+    padding: 0 1em;
+    border-radius: 5px;
+    border-width: 1px;
+    border-color: #3e4a3d;
+}
+
+label {
+    font-size: 14pt;
+}
+
+p {
+    font-size: 14px;
 }
