--- a/Second-Nature/vue/src/style.css
+++ b/Second-Nature/vue/src/style.css
@@ -1,12 +1,18 @@
 body {
     background-color: #f4fbf3;
     color: #3e4a3d;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 14pt;
     margin: 0;
 }
 
 a {
     color: #2a64bd;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 a:visited {
@@ -15,15 +21,25 @@ a:visited {
 
 h1 {
     font-size: 24pt;
-    margin: 10px 0;
+    margin: 0.5em 0;
 }
 
 h2 {
     font-size: 20pt;
+    margin: 0.5em 0;
 }
 
 h3 {
     font-size: 16px;
+}
+
+h4 {
+    font-size: 14pt;
+    margin: 0.5em 0;
+}
+
+h5 {
+    font-size: 12pt;
 }
 
 input {
@@ -40,4 +56,5 @@ label {
 
 p {
     font-size: 14px;
+    color: #3e4a3d;
 }
