--- a/Second-Nature/vue/src/style.css
+++ b/Second-Nature/vue/src/style.css
@@ -30,7 +30,8 @@ h2 {
 }
 
 h3 {
-    font-size: 16px;
+    font-size: 16pt;
+    margin: 0.5em 0;
 }
 
 h4 {
@@ -40,6 +41,8 @@ h4 {
 
 h5 {
     font-size: 12pt;
+    display: inline;
+    font-weight: normal;
 }
 
 input {
@@ -59,3 +62,11 @@ p {
     color: #3e4a3d;
     margin: 0.5em 0;
 }
+
+
+.form-input-group {
+    margin: 0.5em 0;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
