--- a/Second-Nature/vue/src/style.css
+++ b/Second-Nature/vue/src/style.css
@@ -54,7 +54,7 @@ form {
 
 h1 {
     font-size: 24pt;
-    margin: 0.5em 0;
+    margin: 0;
 }
 
 h2 {
@@ -99,7 +99,7 @@ p {
 .content {
     display: flex;
     justify-content: center;
-    margin: 20px 5%;
+    margin: 0 5% 20px 5%;
 }
 
 .form-input-group {
