Progress on autopopulating creating a maintenence ticket, but not working well yet

--- a/Second-Nature/vue/src/style.css
+++ b/Second-Nature/vue/src/style.css
@@ -39,6 +39,17 @@ a {
 a:hover {
     text-decoration: underline;
 }
+.clickable-label:hover {
+    text-decoration: underline;
+}
+.clickable-label {
+    color: #2a64bd;
+    text-decoration: none;
+}
+
+.clickable-label:visited {
+    color: #a1af9f;
+}
 
 a:visited {
     color: #a1af9f;
